--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   },
   "dependencies": {
     "axios": "0.19.2",
-    "discord.js": "12.2.0"
+    "discord.js": "12.2.0",
+    "moment": "2.27.0"
   },
   "devDependencies": {
     "nodemon": "1.18.4"
